--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,41 +1,30 @@
 {
-  "version": "2.0.0",
   "tasks": [
     {
-      "label": "Run Sketch",
-      "type": "shell",
+      "type": "cppbuild",
+      "label": "C/C++: g++.exe сборка активного файла",
+      "command": "C:\\Users\\Arsen4ik\\gcc\\bin\\g++.exe",
+      "args": [
+        "-g",
+        "-std=c++17",
+        "-Wall",
+        "-D_GLIBCXX_DEBUG",
+        "${file}",
+        "-o",
+        "${fileDirname}\\${fileBasenameNoExtension}.exe"
+      ],
+      "options": {
+        "cwd": "C:\\Users\\Arsen4ik\\gcc\\bin"
+      },
+      "problemMatcher": [
+        "$gcc"
+      ],
       "group": {
         "kind": "build",
         "isDefault": true
       },
-      "command": "C:\\Users\\Arsen4ik\\Documents\\processing-3.5.4\\processing-java",
-      "presentation": {
-        "echo": true,
-        "reveal": "always",
-        "focus": false,
-        "panel": "dedicated"
-      },
-      "args": [
-        "--force",
-        "--sketch=${workspaceRoot}",
-        "--output=${workspaceRoot}/out",
-        "--run"
-      ],
-      "windows": {
-        "type": "process",
-        "args": [
-          "--force",
-          {
-            "value": "--sketch=${workspaceRoot}",
-            "quoting": "strong"
-          },
-          {
-            "value": "--output=${workspaceRoot}\\out",
-            "quoting": "strong"
-          },
-          "--run"
-        ]
-      }
+      "detail": "Задача создана отладчиком."
     }
-  ]
+  ],
+  "version": "2.0.0"
 }
